--- a/docs/docs-ref-autogen/excel/excel/excel.conditionalformaticonruletype.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.conditionalformaticonruletype.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ConditionalFormatIconRuleType:enum'
     summary: |-
-      <span data-ttu-id="11fc1-101">表示条件格式值的类型。</span><span class="sxs-lookup"><span data-stu-id="11fc1-101">Represents the types of conditional format values.</span></span>
+      代表图标条件格式的类型。
 
-      <span data-ttu-id="11fc1-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="11fc1-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalFormatIconRuleType
     fullName: Excel.ConditionalFormatIconRuleType
     langs:
