--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.filterdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.filterdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.FilterData:interface'
-    summary: <span data-ttu-id="318b3-101">描述通过调用返回的数据的接口`filter.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="318b3-101">An interface describing the data returned by calling `filter.toJSON()`</span></span><!-- --><span data-ttu-id="318b3-102">.</span><span class="sxs-lookup"><span data-stu-id="318b3-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`filter.toJSON()`<!-- -->.
     name: Excel.Interfaces.FilterData
     fullName: Excel.Interfaces.FilterData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.FilterData#criteria:member'
   - uid: 'excel!Excel.Interfaces.FilterData#criteria:member'
     summary: |-
-      <span data-ttu-id="318b3-103">给定列上当前应用的筛选器。</span><span class="sxs-lookup"><span data-stu-id="318b3-103">The currently applied filter on the given column.</span></span> <span data-ttu-id="318b3-104">只读。</span><span class="sxs-lookup"><span data-stu-id="318b3-104">Read-only.</span></span>
+      给定列上当前应用的筛选器。
 
-      <span data-ttu-id="318b3-105">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="318b3-105">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: criteria
     fullName: criteria
     langs:
