--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.customconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.customconditionalformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CustomConditionalFormatData:interface'
-    summary: <span data-ttu-id="5629b-101">描述通过调用返回的数据的接口`customConditionalFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="5629b-101">An interface describing the data returned by calling `customConditionalFormat.toJSON()`</span></span><!-- --><span data-ttu-id="5629b-102">.</span><span class="sxs-lookup"><span data-stu-id="5629b-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`customConditionalFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.CustomConditionalFormatData
     fullName: Excel.Interfaces.CustomConditionalFormatData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.CustomConditionalFormatData#rule:member'
   - uid: 'excel!Excel.Interfaces.CustomConditionalFormatData#format:member'
     summary: |-
-      <span data-ttu-id="5629b-103">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="5629b-103">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span> <span data-ttu-id="5629b-104">只读。</span><span class="sxs-lookup"><span data-stu-id="5629b-104">Read-only.</span></span>
+      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
 
-      <span data-ttu-id="5629b-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5629b-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatData:interface'
   - uid: 'excel!Excel.Interfaces.CustomConditionalFormatData#rule:member'
     summary: |-
-      <span data-ttu-id="5629b-106">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="5629b-106">Represents the Rule object on this conditional format.</span></span> <span data-ttu-id="5629b-107">只读。</span><span class="sxs-lookup"><span data-stu-id="5629b-107">Read-only.</span></span>
+      指定此条件格式的 Rule 对象。
 
-      <span data-ttu-id="5629b-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5629b-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
     fullName: rule
     langs:
