--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.datavalidationdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.datavalidationdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.DataValidationData:interface'
-    summary: <span data-ttu-id="4cc8b-101">描述通过调用返回的数据的接口`dataValidation.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="4cc8b-101">An interface describing the data returned by calling `dataValidation.toJSON()`</span></span><!-- --><span data-ttu-id="4cc8b-102">.</span><span class="sxs-lookup"><span data-stu-id="4cc8b-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`dataValidation.toJSON()`<!-- -->.
     name: Excel.Interfaces.DataValidationData
     fullName: Excel.Interfaces.DataValidationData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.DataValidationData#valid:member'
   - uid: 'excel!Excel.Interfaces.DataValidationData#errorAlert:member'
     summary: |-
-      <span data-ttu-id="4cc8b-103">用户输入无效数据时，出现错误警报。</span><span class="sxs-lookup"><span data-stu-id="4cc8b-103">Error alert when user enters invalid data.</span></span>
+      用户输入无效数据时，出现错误警报。
 
-      <span data-ttu-id="4cc8b-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cc8b-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: errorAlert
     fullName: errorAlert
     langs:
@@ -32,9 +32,9 @@ items:
           - 'excel!Excel.DataValidationErrorAlert:interface'
   - uid: 'excel!Excel.Interfaces.DataValidationData#ignoreBlanks:member'
     summary: |-
-      <span data-ttu-id="4cc8b-105">忽略空白：不会对空白单元格执行数据严重，默认为 true。</span><span class="sxs-lookup"><span data-stu-id="4cc8b-105">Ignore blanks: no data validation will be performed on blank cells, it defaults to true.</span></span>
+      指定是否对空单元格执行数据验证，其默认值为 true。
 
-      <span data-ttu-id="4cc8b-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cc8b-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: ignoreBlanks
     fullName: ignoreBlanks
     langs:
@@ -47,9 +47,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataValidationData#prompt:member'
     summary: |-
-      <span data-ttu-id="4cc8b-107">当用户选择单元格时提示。</span><span class="sxs-lookup"><span data-stu-id="4cc8b-107">Prompt when users select a cell.</span></span>
+      当用户选择单元格时提示。
 
-      <span data-ttu-id="4cc8b-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cc8b-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: prompt
     fullName: prompt
     langs:
@@ -62,9 +62,9 @@ items:
           - 'excel!Excel.DataValidationPrompt:interface'
   - uid: 'excel!Excel.Interfaces.DataValidationData#rule:member'
     summary: |-
-      <span data-ttu-id="4cc8b-109">包含不同类型的数据验证条件的数据有效性规则。</span><span class="sxs-lookup"><span data-stu-id="4cc8b-109">Data validation rule that contains different type of data validation criteria.</span></span>
+      包含不同类型的数据验证条件的数据有效性规则。
 
-      <span data-ttu-id="4cc8b-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cc8b-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
     fullName: rule
     langs:
@@ -77,9 +77,9 @@ items:
           - 'excel!Excel.DataValidationRule:interface'
   - uid: 'excel!Excel.Interfaces.DataValidationData#type:member'
     summary: |-
-      <span data-ttu-id="4cc8b-111">数据有效性类型，有关详细信息，请参阅 Excel.DataValidationType。</span><span class="sxs-lookup"><span data-stu-id="4cc8b-111">Type of the data validation, see Excel.DataValidationType for details.</span></span>
+      数据有效性类型，有关详细信息，请参阅 Excel.DataValidationType。
 
-      <span data-ttu-id="4cc8b-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cc8b-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -92,9 +92,9 @@ items:
           - 'excel!Excel.Interfaces.DataValidationData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.DataValidationData#valid:member'
     summary: |-
-      <span data-ttu-id="4cc8b-113">表示所有单元格值根据数据有效性规则是否全部有效。</span><span class="sxs-lookup"><span data-stu-id="4cc8b-113">Represents if all cell values are valid according to the data validation rules.</span></span> <span data-ttu-id="4cc8b-114">如果所有单元格的值都有效，则返回 true; 如果所有单元格值无效，则返回 false。</span><span class="sxs-lookup"><span data-stu-id="4cc8b-114">Returns true if all cell values are valid, or false if all cell values are invalid.</span></span> <span data-ttu-id="4cc8b-115">如果区域中存在有效和无效的单元格值，则返回 null。</span><span class="sxs-lookup"><span data-stu-id="4cc8b-115">Returns null if there are both valid and invalid cell values within the range.</span></span>
+      表示所有单元格值根据数据有效性规则是否全部有效。 如果所有单元格的值都有效，则返回 true; 如果所有单元格值无效，则返回 false。 如果区域中存在有效和无效的单元格值，则返回 null。
 
-      <span data-ttu-id="4cc8b-116">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cc8b-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valid
     fullName: valid
     langs:
